# PDF_Parser

./: .gitignore  README.md  debug_columns.py  debug_resume.py  pyproject.toml  test_pdfplumber.py
src/pdf_parser/: __init__.py  cli.py
src/pdf_parser/core/: __init__.py  document.py  exceptions.py  page.py
src/pdf_parser/layout/: __init__.py  analyzer.py  columns.py  paragraphs.py
src/pdf_parser/output/: __init__.py  formatter.py  models.py
src/pdf_parser/tables/: __init__.py  ascii_converter.py  detector.py
tests/: __init__.py
tests/unit/: test_ascii_converter.py  test_exceptions.py  test_models.py
